Fixing bio issue; Adding break in header on frontpage

--- a/style.css
+++ b/style.css
@@ -1059,9 +1059,6 @@ nav[role="navigation"] {
     .page-desc {
         padding: 60px;
     }
-    .page-desc {
-        width: 75%;
-    }
     .page-desc h1,
     .page-desc h2,
     .page-desc h3{
